# backpropagation

./: .gitignore  CMakeLists.txt  Makefile  README.md  cnn
include/: layer.h  network.h  test.h
src/: layer.cpp  main.cpp  network.cpp  test.cpp
test/: plot_error.gpi  run_test.sh
